--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@solana/wallet-adapter-wallets": "^0.19.11",
+    "axios": "^0.21.4",
     "marked": "^4.2.12",
     "solana-wallets-vue": "^0.5.2",
     "vue": "^3.2.45"
